--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
 <title>Virtual Hub OS</title>
 <link rel="stylesheet" href="css/stylesheet.css">
-<script src="js/scripting.js"></script>
 </head>
 <body>
-
+<h1>Virtual Hub OS</h1>
+<p>An OS built from scratch in C</p>
+<div id="Hub">
+<script src="js/os.js"></script>
+</div>
 </body>
 </html>
