--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
 <h1>Virtual Hub OS</h1>
-<p>An OS built from scratch in C</p>
+<p class="Description">An OS built from scratch in C</p>
 <div id="Hub">
 <script src="js/os.js"></script>
 </div>
+<p class="Status">Status on actual OS: Didn't start Development yet</p>
+<p class="Status">Version of OS shown: v0.1.0</p>
 </body>
 </html>
