Made the status on the OS more clear

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <script src="js/os.js"></script>
 </div>
 <p class="Status">Status on actual OS: Didn't start Development yet</p>
-<p class="Status">Version of OS shown: v0.1.0</p>
+<p class="Status">Version of OS shown: Mockup of v0.1.0</p>
 </body>
 </html>
