--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <h1>Virtual Hub OS</h1>
 <p class="Description">An OS built from scratch in C</p>
 <div id="Hub">
-<script src="js/os.js"></script>
+<div class="Button">Turn on the OS</div>
 </div>
 <p class="Status">Status on actual OS: Didn't start Development yet</p>
 <p class="Status">Version of OS shown: Mockup of v0.1.0</p>
+<script src="js/os.js"></script>
 </body>
 </html>
