--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="Hub">
 <div class="Button" id="Start-OS">Turn on the OS</div>
 </div>
-<p class="Status">Status on actual OS: <progress>Didn't start Development yet</progress></p>
+<p class="Status">Status on actual OS: <progress value="0.00">Didn't start Development yet</progress></p>
 <p class="Status">Version of OS shown: Mockup of v0.1.0</p>
 <script src="js/os.js"></script>
 </body>
